1.12 -> 1.13:
    - jbj: refactor column cursor to a structure, carry maxcols as well.
    - jbj: use TIOCGWINSZ to determine --help column wrapping.
    - jbj: help formatting for POPT_ARG_MAINCALL.
    - jbj: remove N_(...) markings from popt.h, markers in popthelp.c instead.
    - jbj: add zh_CN.po (Translation Project).
    - jbj: use PACKAGE_BUGREPORT.
    - jbj: hotwire POPT_AUTOHELP/POPT_AUTOALIAS lookup in popt i18n domain.

1.11 -> 1.12
    - jbj: plug a memory leak.
    - jbj: fix index thinko.
    - jbj: add vi.po (Translation Project).
    - jbj: add nl.po (Translation Project).
    
1.5 -> 1.6
	- add ability to perform callbacks for every, not just first, match.

1.3 -> 1.5
	- heavy dose of const's
	- poptParseArgvString() now NULL terminates the list

1.2.3 -> 1.3
	- added support for single -
	- misc bug fixes
	- portability improvements

1.2.2 -> 1.2.3
	- fixed memset() in help message generation (Dale Hawkins)
	- added extern "C" stuff to popt.h for C++ compilers (Dale Hawkins)
	- const'ified poptParseArgvString (Jeff Garzik)

1.2.1 -> 1.2.2
	- fixed bug in chaind alias happens which seems to have only
	  affected --triggers in rpm
	- added POPT_ARG_VAL
	- popt.3 installed by default

1.2 -> 1.2.1
	- added POPT_ARG_INTL_DOMAIN (Elliot Lee)
	- updated Makefile's to be more GNUish (Elliot Lee)

1.1 -> 1.2
	- added popt.3 man page (Robert Lynch)
	- don't use mmap anymore (its lack of portability isn't worth the
	  trouble)
	- added test script
	- added support for exec
	- removed support for *_POPT_ALIASES env variable -- it was a bad
	  idea
	- reorganized into multiple source files
	- added automatic help generation, POPT_AUTOHELP
	- added table callbacks
	- added table inclusion
	- updated man page for new features
	- added test scripts

1.0 -> 1.1
	- moved to autoconf (Fred Fish)
	- added STRERROR replacement (Norbert Warmuth)
	- added const keywords (Bruce Perens)